examenes/2017Q2 - 2do parcial/Monzon/firewall.conf
# Generated by iptables-save v1.4.21 on Wed Nov 15 21:45:06 2017
*filter
:INPUT DROP [6:1398]
:FORWARD DROP [5:310]
:OUTPUT DROP [4:284]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.0/24 -p tcp -m tcp --dport 22
-A INPUT -s 192.168.20.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.20.8/32 -p tcp -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Wed Nov 15 21:45:06 2017
